Start using JDK 17
- Run errorprone javac has forks and pass flags to allow it
  to do reflection as suggested in https://errorprone.info/docs/installation
- Add reflection allow list for robolectric tests
- Add reflection allow list for buildSrc-tests
- Add reflection allow list for compiler-hosted tests
- Add arguments to several project Test tasks to allow reflection
  by the google compile testing library
- Suppress warnining in paparazzi reflection code

Test: ./gradlew assembleAndroidTest
Change-Id: I69b3db46670b9a972e64a56b3206102aa76a9211