@@ -62,6 +62,11 @@ dependencies {
 
 SdkResourceGenerator.generateForHostTest(project)
 
+tasks.withType(Test).configureEach {
+    // https://github.com/gradle/gradle/issues/22317
+    it.jvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
+}
+
 // Also do style checking of the buildSrc project from within this project
 // We run that from this project so that it doesn't block other projects while it runs
 def ktlintDir = file("../buildSrc")
